--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,6 @@
   </tr>
   <tr *ngFor="let item of getLista(); index as i">
     <td>{{ item }}</td>
-    <td><button (click)="getLista()">Concluida</button></td>
+    <td><button (click)="popLista(i)">Concluida</button></td>
   </tr>
 </table>
-<button (click)="getLista()">Concluida</button>
